--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -86,7 +86,7 @@
   line-height: 1.5;
   padding: 4px;
   align-items: center;
-  height: 100%;
+  /* height: 100%; */
   justify-content: center;
   backdrop-filter: blur(5px);
 
@@ -113,7 +113,8 @@
   padding: 48px;
   padding-top: 40px;
   padding-bottom: 0;
-  min-height: 550px;
+  height: 100%;
+  min-height: 580px;
 }
 
 /* .inner {
